# MeLi_POC

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
docs/: reproducibility.md  sharing.md  solution_design.md
outputs/datasets/: dataset_manifest.json
outputs/golden_set/: golden_manifest_v1.json  golden_strategy_v1.md
outputs/models/: text_nb_model_v1.json  visual_feature_model_v1.json
outputs/reports/: candidate_smoke_latest.json  candidate_validation_100_unique_latest.json  candidate_validation_latest.json  easyocr_pretrained_visual_fusion_100.json  end_to_end_validation_100.json  end_to_end_validation_100_multipass.json  end_to_end_validation_100_multipass_pass25.json  end_to_end_validation_100_multipass_policy.json  end_to_end_validation_100_unique_arch_policy.json  end_to_end_validation_100_unique_easyocr.json  end_to_end_validation_100_unique_full_pipeline.json  end_to_end_validation_100_unique_full_pipeline_conservative.json  end_to_end_validation_100_unique_multipass_policy.json  end_to_end_validation_100_unique_ocr_ensemble.json  end_to_end_validation_50.json  end_to_end_validation_easyocr_smoke.json  end_to_end_validation_easyocr_smoke_warm.json  (+13 more)
scripts/: build_datasets.py  build_final_report_docx.py  compare_baselines.py  diagnose_url.py  evaluate_end_to_end.py  evaluate_model.py  generate_golden_set.py  train_clip_visual_model.py  train_finetuned_visual_model.py  train_model.py  train_pretrained_visual_model.py  train_visual_model.py
tests/: test_datasets.py  test_detector.py  test_policy.py  test_text_model.py
(+13 files in other folders)
